# postgres-viewer

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: APP_STORE.md
src/: App.tsx  ResultGrid.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  error.rs  main.rs  models.rs
src-tauri/tests/: live_supabase.rs
